--- a/templates/subjects/show.handlebars
+++ b/templates/subjects/show.handlebars
@@ -39,6 +39,8 @@
     </tr>
     <tr>
         <th>Prerequisite</th>
-        <td class="subject-name">{{subject.prerequisite}}</td>
+        <td class="Prerequisite-name">{{subject.prerequisite}}</td>
     </tr>
+
+    
 </table>
