--- a/templates/authentication/register_doc.handlebars
+++ b/templates/authentication/register_doc.handlebars
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Login Form</title>
     <style>
@@ -15,38 +15,40 @@
             height: 100vh;
         }
 
-    .login-container {
-        background-color: #fff;
-        border-radius: 5px;
-        padding: 20px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-        width: 300px;
-    }
+        .login-container {
+            background-color: #fff;
+            border-radius: 5px;
+            padding: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+            width: 300px;
+        }
 
-    .login-container h2 {
-        text-align: center;
-    }
+        .login-container h2 {
+            text-align: center;
+        }
 
-    .login-container input[type="text"],
-    .login-container input[type="password"] {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-    }
+        .login-container input[type="text"],
+        .login-container input[type="password"],
+        .login-container select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
 
-    .login-container button[type="submit"] {
-        width: 100%;
-        padding: 10px;
-        background-color: #4CAF50;
-        color: #fff;
-        border: none;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-</style>
+        .login-container button[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+    </style>
 </head>
+
 <body>
     <div class="login-container">
         <h2>Create account for doctor</h2>
@@ -64,9 +66,19 @@
                 <input type="password" name="password" id="password">
             </div>
             <div>
+                <label for="subjects">Subject</label>
+                <select name='subjects' id='subjects' class='select'>
+                    <option style="display: none;"></option>
+                    {{#each subjects}}
+                    <option>{{ this }}</option>
+                    {{/each}}
+                </select>
+            </div>
+            <div>
                 <button type="submit">Register</button>
             </div>
         </form>
     </div>
 </body>
+
 </html>
